Macbook Pro default git commit.

--- a/Daily/Daily/Interface/Test/Test.storyboard
+++ b/Daily/Daily/Interface/Test/Test.storyboard
@@ -95,18 +95,18 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xUh-Yv-Yjk" userLabel="Chart">
                             <rect key="frame" x="0.0" y="40" width="371" height="159"/>
                             <subviews>
-                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dpG-KO-EIR">
+                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dpG-KO-EIR">
                                     <rect key="frame" x="8" y="0.0" width="355" height="159"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kyd-Cu-LEb">
+                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kyd-Cu-LEb">
                                         <size key="itemSize" width="103" height="154"/>
                                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     </collectionViewFlowLayout>
                                     <cells>
-                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="d1I-F5-UAP">
-                                            <rect key="frame" x="0.0" y="0.0" width="103" height="154"/>
+                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="d1I-F5-UAP" customClass="ShowChartCardCell" customModule="Daily" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="2.5" width="103" height="154"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                                 <rect key="frame" x="0.0" y="0.0" width="103" height="154"/>
@@ -132,8 +132,16 @@
                                                 <constraint firstAttribute="trailing" secondItem="YrQ-5M-RXK" secondAttribute="trailing" id="n4M-OQ-EI0"/>
                                                 <constraint firstItem="YrQ-5M-RXK" firstAttribute="leading" secondItem="d1I-F5-UAP" secondAttribute="leading" id="vTD-yD-VCs"/>
                                             </constraints>
+                                            <connections>
+                                                <outlet property="animate" destination="YrQ-5M-RXK" id="pLc-NL-c7Q"/>
+                                                <outlet property="title" destination="VsJ-cI-jRM" id="KOa-vO-Qix"/>
+                                            </connections>
                                         </collectionViewCell>
                                     </cells>
+                                    <connections>
+                                        <outlet property="dataSource" destination="76H-zm-0Y4" id="rsD-E7-Rkg"/>
+                                        <outlet property="delegate" destination="76H-zm-0Y4" id="fJT-Ij-jw7"/>
+                                    </connections>
                                 </collectionView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
