--- a/Days/Days/Interfaces/Habit/Edit/HabitEdit.storyboard
+++ b/Days/Days/Interfaces/Habit/Edit/HabitEdit.storyboard
@@ -84,7 +84,7 @@
                     <connections>
                         <outlet property="left" destination="qBJ-Xf-MRR" id="TFK-fZ-wlf"/>
                         <outlet property="right" destination="Ol0-b6-H7R" id="gdW-SK-rWO"/>
-                        <outlet property="title" destination="dit-Js-PNs" id="SQy-lj-9sk"/>
+                        <outlet property="title" destination="dit-Js-PNs" id="dRY-Gc-rwD"/>
                     </connections>
                 </view>
                 <view contentMode="scaleToFill" id="bqZ-Oj-UpF" customClass="HabitEditNameCard" customModule="Days" customModuleProvider="target">
@@ -152,19 +152,23 @@
                             <rect key="frame" x="20" y="76.5" width="97" height="63.5"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M9H-l1-Tdu">
-                                    <rect key="frame" x="20" y="12" width="57" height="40"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="97" height="63.5"/>
                                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="20"/>
                                     <state key="normal" title="计时">
                                         <color key="titleColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                                     </state>
+                                    <connections>
+                                        <action selector="type_timer_action:" destination="W0V-ua-F57" eventType="touchUpInside" id="jTd-hb-KCM"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
+                                <constraint firstItem="M9H-l1-Tdu" firstAttribute="top" secondItem="7oj-i0-qUA" secondAttribute="top" id="EN5-vE-yGC"/>
                                 <constraint firstAttribute="height" constant="63.5" id="Eva-6I-LQc"/>
-                                <constraint firstAttribute="trailing" secondItem="M9H-l1-Tdu" secondAttribute="trailing" constant="20" id="HD1-sv-cGC"/>
-                                <constraint firstItem="M9H-l1-Tdu" firstAttribute="centerY" secondItem="7oj-i0-qUA" secondAttribute="centerY" id="JrM-iN-luU"/>
-                                <constraint firstItem="M9H-l1-Tdu" firstAttribute="leading" secondItem="7oj-i0-qUA" secondAttribute="leading" constant="20" id="Kyl-bJ-Fjz"/>
+                                <constraint firstAttribute="trailing" secondItem="M9H-l1-Tdu" secondAttribute="trailing" id="FsQ-dp-4EP"/>
+                                <constraint firstItem="M9H-l1-Tdu" firstAttribute="leading" secondItem="7oj-i0-qUA" secondAttribute="leading" id="vWv-8V-8mZ"/>
+                                <constraint firstAttribute="bottom" secondItem="M9H-l1-Tdu" secondAttribute="bottom" id="xYB-YH-qwk"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="corner">
@@ -176,19 +180,23 @@
                             <rect key="frame" x="137" y="76" width="97" height="63.5"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kZL-uL-DxZ">
-                                    <rect key="frame" x="20" y="12" width="57" height="40"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="97" height="63.5"/>
                                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="20"/>
                                     <state key="normal" title="计数">
                                         <color key="titleColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                                     </state>
+                                    <connections>
+                                        <action selector="type_count_action:" destination="W0V-ua-F57" eventType="touchUpInside" id="4SZ-vR-DwD"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstItem="kZL-uL-DxZ" firstAttribute="leading" secondItem="nLK-RN-d6k" secondAttribute="leading" constant="20" id="L1U-m2-JKD"/>
+                                <constraint firstAttribute="bottom" secondItem="kZL-uL-DxZ" secondAttribute="bottom" id="1fM-tP-k4o"/>
                                 <constraint firstAttribute="height" constant="63.5" id="Lak-Y9-tEr"/>
-                                <constraint firstItem="kZL-uL-DxZ" firstAttribute="centerY" secondItem="nLK-RN-d6k" secondAttribute="centerY" id="htz-bW-mDH"/>
-                                <constraint firstAttribute="trailing" secondItem="kZL-uL-DxZ" secondAttribute="trailing" constant="20" id="k1g-ms-Yre"/>
+                                <constraint firstItem="kZL-uL-DxZ" firstAttribute="top" secondItem="nLK-RN-d6k" secondAttribute="top" id="MJa-Ty-J9d"/>
+                                <constraint firstItem="kZL-uL-DxZ" firstAttribute="leading" secondItem="nLK-RN-d6k" secondAttribute="leading" id="RRH-RL-0PU"/>
+                                <constraint firstAttribute="trailing" secondItem="kZL-uL-DxZ" secondAttribute="trailing" id="o2m-7o-dvh"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="corner">
@@ -207,11 +215,14 @@
                                     </state>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Bb-m6-yxP">
-                                    <rect key="frame" x="20" y="12" width="174" height="40"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="214" height="64"/>
                                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="20"/>
                                     <state key="normal">
                                         <color key="titleColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                                     </state>
+                                    <connections>
+                                        <action selector="goal_action:" destination="W0V-ua-F57" eventType="touchUpInside" id="mB8-v0-xZp"/>
+                                    </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="小时" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eo6-cp-qmv">
                                     <rect key="frame" x="118.5" y="18" width="40" height="28"/>
@@ -224,12 +235,13 @@
                             <constraints>
                                 <constraint firstItem="usq-zk-Hky" firstAttribute="centerY" secondItem="0xQ-9C-Vun" secondAttribute="centerY" id="7Rf-iB-HvT"/>
                                 <constraint firstAttribute="height" constant="63.5" id="CUk-Jp-nbE"/>
-                                <constraint firstItem="1Bb-m6-yxP" firstAttribute="centerY" secondItem="0xQ-9C-Vun" secondAttribute="centerY" id="MnN-Za-rqL"/>
                                 <constraint firstItem="eo6-cp-qmv" firstAttribute="centerY" secondItem="usq-zk-Hky" secondAttribute="centerY" id="RiC-9R-iyf"/>
-                                <constraint firstAttribute="trailing" secondItem="1Bb-m6-yxP" secondAttribute="trailing" constant="20" id="WCV-Mr-63t"/>
                                 <constraint firstItem="usq-zk-Hky" firstAttribute="centerX" secondItem="0xQ-9C-Vun" secondAttribute="centerX" constant="-25" id="mhW-Af-doL"/>
+                                <constraint firstAttribute="trailing" secondItem="1Bb-m6-yxP" secondAttribute="trailing" id="qbq-SV-mUe"/>
+                                <constraint firstItem="1Bb-m6-yxP" firstAttribute="leading" secondItem="0xQ-9C-Vun" secondAttribute="leading" id="rRb-jy-Ipv"/>
                                 <constraint firstItem="eo6-cp-qmv" firstAttribute="leading" secondItem="usq-zk-Hky" secondAttribute="trailing" constant="8" id="tCb-34-OQi"/>
-                                <constraint firstItem="1Bb-m6-yxP" firstAttribute="leading" secondItem="0xQ-9C-Vun" secondAttribute="leading" constant="20" id="vsj-99-yer"/>
+                                <constraint firstAttribute="bottom" secondItem="1Bb-m6-yxP" secondAttribute="bottom" id="u1E-cK-8t7"/>
+                                <constraint firstItem="1Bb-m6-yxP" firstAttribute="top" secondItem="0xQ-9C-Vun" secondAttribute="top" id="xOs-uc-iCZ"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="corner">
@@ -248,11 +260,14 @@
                                     </state>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KIX-pe-RiA">
-                                    <rect key="frame" x="20" y="12" width="174" height="40"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="214" height="64"/>
                                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="20"/>
                                     <state key="normal">
                                         <color key="titleColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                                     </state>
+                                    <connections>
+                                        <action selector="frequency_action:" destination="W0V-ua-F57" eventType="touchUpInside" id="Nwg-6c-OLa"/>
+                                    </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分钟 / 天" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ynd-HO-WX5">
                                     <rect key="frame" x="90" y="18" width="84" height="28"/>
@@ -263,14 +278,15 @@
                             </subviews>
                             <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstItem="KIX-pe-RiA" firstAttribute="centerY" secondItem="Cj5-ll-BgW" secondAttribute="centerY" id="BHx-kE-QPD"/>
-                                <constraint firstItem="KIX-pe-RiA" firstAttribute="leading" secondItem="Cj5-ll-BgW" secondAttribute="leading" constant="20" id="Dac-G2-5sa"/>
+                                <constraint firstAttribute="trailing" secondItem="KIX-pe-RiA" secondAttribute="trailing" id="JwG-8G-0a5"/>
                                 <constraint firstItem="eH3-uD-L6p" firstAttribute="centerY" secondItem="Cj5-ll-BgW" secondAttribute="centerY" id="Mx6-fE-ihg"/>
-                                <constraint firstAttribute="trailing" secondItem="KIX-pe-RiA" secondAttribute="trailing" constant="20" id="Ojj-Gh-scc"/>
                                 <constraint firstItem="ynd-HO-WX5" firstAttribute="centerY" secondItem="eH3-uD-L6p" secondAttribute="centerY" id="Upm-bb-Veq"/>
                                 <constraint firstItem="ynd-HO-WX5" firstAttribute="leading" secondItem="eH3-uD-L6p" secondAttribute="trailing" constant="8" id="Xsd-q1-nzZ"/>
+                                <constraint firstItem="KIX-pe-RiA" firstAttribute="leading" secondItem="Cj5-ll-BgW" secondAttribute="leading" id="csb-fM-MCS"/>
                                 <constraint firstAttribute="height" constant="63.5" id="eBe-VU-MJ6"/>
+                                <constraint firstItem="KIX-pe-RiA" firstAttribute="top" secondItem="Cj5-ll-BgW" secondAttribute="top" id="kfU-q8-A5V"/>
                                 <constraint firstItem="eH3-uD-L6p" firstAttribute="centerX" secondItem="Cj5-ll-BgW" secondAttribute="centerX" constant="-40" id="n5P-5W-FuY"/>
+                                <constraint firstAttribute="bottom" secondItem="KIX-pe-RiA" secondAttribute="bottom" id="nKg-wp-PK9"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="corner">
@@ -308,6 +324,16 @@
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="string" keyPath="identifier" value="Goal"/>
                     </userDefinedRuntimeAttributes>
+                    <connections>
+                        <outlet property="frequency_button" destination="eH3-uD-L6p" id="Nao-bm-Itk"/>
+                        <outlet property="frequency_unit_label" destination="ynd-HO-WX5" id="oPs-h8-04r"/>
+                        <outlet property="goal_button" destination="usq-zk-Hky" id="qln-ND-6gS"/>
+                        <outlet property="goal_unit_label" destination="eo6-cp-qmv" id="r5b-Zy-bU8"/>
+                        <outlet property="type_count_button" destination="kZL-uL-DxZ" id="oJ2-2B-GF6"/>
+                        <outlet property="type_count_view" destination="nLK-RN-d6k" id="Inv-D3-lAi"/>
+                        <outlet property="type_timer_button" destination="M9H-l1-Tdu" id="cma-MG-W5L"/>
+                        <outlet property="type_timer_view" destination="7oj-i0-qUA" id="r4v-vy-jLF"/>
+                    </connections>
                 </view>
                 <view contentMode="scaleToFill" id="y1v-v7-lRY" customClass="HabitEditUICard" customModule="Days" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="311" height="147"/>
@@ -325,12 +351,13 @@
                             <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lko-bS-Oo2" customClass="Button" customModule="Days" customModuleProvider="target">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lko-bS-Oo2">
                             <rect key="frame" x="68.5" y="77" width="50" height="50"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="50" id="jSJ-rw-yUG"/>
                                 <constraint firstAttribute="width" secondItem="Lko-bS-Oo2" secondAttribute="height" id="t4y-tI-9G4"/>
                             </constraints>
+                            <state key="normal" image="alarm-clock"/>
                             <connections>
                                 <action selector="image_action:" destination="y1v-v7-lRY" eventType="touchUpInside" id="N2s-xZ-a2q"/>
                             </connections>
@@ -390,6 +417,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="alarm-clock" width="60" height="60"/>
         <image name="but_error" width="60" height="60"/>
         <image name="but_success" width="60" height="60"/>
     </resources>
