--- a/Days/Days/Interfaces/Habit/Edit/HabitEdit.storyboard
+++ b/Days/Days/Interfaces/Habit/Edit/HabitEdit.storyboard
@@ -27,6 +27,7 @@
                                     <outletCollection property="cards" destination="bqZ-Oj-UpF" collectionClass="NSMutableArray" id="2dk-yb-XIh"/>
                                     <outletCollection property="cards" destination="W0V-ua-F57" collectionClass="NSMutableArray" id="oZR-hb-PIG"/>
                                     <outletCollection property="cards" destination="y1v-v7-lRY" collectionClass="NSMutableArray" id="Mpw-A7-9Lo"/>
+                                    <outletCollection property="cards" destination="ib5-AJ-cuw" collectionClass="NSMutableArray" id="9tW-3d-3eW"/>
                                 </connections>
                             </scrollView>
                         </subviews>
@@ -81,6 +82,9 @@
                         <constraint firstItem="dit-Js-PNs" firstAttribute="centerY" secondItem="OPj-fz-yNY" secondAttribute="centerY" id="tsa-kF-3rh"/>
                     </constraints>
                     <viewLayoutGuide key="safeArea" id="OPj-fz-yNY"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="identifier" value="Top"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <outlet property="left" destination="qBJ-Xf-MRR" id="TFK-fZ-wlf"/>
                         <outlet property="right" destination="Ol0-b6-H7R" id="gdW-SK-rWO"/>
@@ -134,6 +138,9 @@
                         <constraint firstItem="MnC-6Q-X5h" firstAttribute="leading" secondItem="FaE-3h-qYM" secondAttribute="leading" constant="20" id="nMN-So-aly"/>
                     </constraints>
                     <viewLayoutGuide key="safeArea" id="FaE-3h-qYM"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="identifier" value="Name"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <outlet property="name_button" destination="PAn-bj-xlh" id="Xb2-uf-aaX"/>
                     </connections>
@@ -394,6 +401,70 @@
                     <connections>
                         <outlet property="color" destination="sOx-MS-332" id="EOe-JG-6vV"/>
                         <outlet property="image" destination="Lko-bS-Oo2" id="ASC-aa-XPj"/>
+                    </connections>
+                </view>
+                <view contentMode="scaleToFill" id="ib5-AJ-cuw" customClass="HabitEditMessageCard" customModule="Days" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="372" height="160"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="告诉自己" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4JD-xO-hap">
+                            <rect key="frame" x="20" y="20" width="105" height="37"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="37" id="art-7l-q9E"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="26"/>
+                            <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VuZ-SR-jhy" customClass="View" customModule="Days" customModuleProvider="target">
+                            <rect key="frame" x="20" y="77" width="332" height="63"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="频率" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zmJ-Fb-J1d">
+                                    <rect key="frame" x="10" y="10" width="312" height="43"/>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="20"/>
+                                    <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LYi-QJ-wme">
+                                    <rect key="frame" x="0.0" y="0.0" width="332" height="63"/>
+                                    <connections>
+                                        <action selector="input_action:" destination="ib5-AJ-cuw" eventType="touchUpInside" id="pGM-Ue-zbX"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="zmJ-Fb-J1d" secondAttribute="trailing" constant="10" id="5zZ-pp-hHa"/>
+                                <constraint firstItem="LYi-QJ-wme" firstAttribute="top" secondItem="VuZ-SR-jhy" secondAttribute="top" id="C2Z-hG-Inw"/>
+                                <constraint firstAttribute="trailing" secondItem="LYi-QJ-wme" secondAttribute="trailing" id="E4y-cU-GsZ"/>
+                                <constraint firstItem="zmJ-Fb-J1d" firstAttribute="leading" secondItem="VuZ-SR-jhy" secondAttribute="leading" constant="10" id="Nde-l9-0D3"/>
+                                <constraint firstItem="zmJ-Fb-J1d" firstAttribute="top" secondItem="VuZ-SR-jhy" secondAttribute="top" constant="10" id="TMf-TM-iXR"/>
+                                <constraint firstAttribute="bottom" secondItem="zmJ-Fb-J1d" secondAttribute="bottom" constant="10" id="U3Z-kt-1kb"/>
+                                <constraint firstAttribute="bottom" secondItem="LYi-QJ-wme" secondAttribute="bottom" id="sgL-nl-xZy"/>
+                                <constraint firstItem="LYi-QJ-wme" firstAttribute="leading" secondItem="VuZ-SR-jhy" secondAttribute="leading" id="tfm-Go-KMX"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="corner">
+                                    <real key="value" value="10"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="kXw-Pd-pTz" firstAttribute="bottom" secondItem="VuZ-SR-jhy" secondAttribute="bottom" constant="20" id="Hd9-Q4-mF1"/>
+                        <constraint firstItem="4JD-xO-hap" firstAttribute="top" secondItem="kXw-Pd-pTz" secondAttribute="top" constant="20" id="LPE-Tt-4g8"/>
+                        <constraint firstItem="4JD-xO-hap" firstAttribute="leading" secondItem="kXw-Pd-pTz" secondAttribute="leading" constant="20" id="bIH-nR-5Nb"/>
+                        <constraint firstItem="VuZ-SR-jhy" firstAttribute="leading" secondItem="kXw-Pd-pTz" secondAttribute="leading" constant="20" id="k03-Qe-8ap"/>
+                        <constraint firstItem="kXw-Pd-pTz" firstAttribute="trailing" secondItem="VuZ-SR-jhy" secondAttribute="trailing" constant="20" id="laJ-pl-dyf"/>
+                        <constraint firstItem="VuZ-SR-jhy" firstAttribute="top" secondItem="4JD-xO-hap" secondAttribute="bottom" constant="20" id="z47-tL-3iV"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="kXw-Pd-pTz"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="identifier" value="Message"/>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <outlet property="message" destination="zmJ-Fb-J1d" id="x9S-PX-Rk6"/>
                     </connections>
                 </view>
             </objects>
